Corrected minor grammar errors Modified CSS for better viewing on mobile devices Changed "Solution" of 47th project to two phases

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,210 +1,240 @@
+
 html,body,div,span,p,ul,li{
-	margin:0;
-	padding:0;
+	margin  : 0;
+	padding : 0;
 }
 
 html,body{
-	height:	100%;
-	font-family: 'Lato', sans-serif;;
+	height      : 100%;
+	font-family : 'Lato', sans-serif;;
 }
 
 body{
-	display:flex;
-	flex-direction:row;
+	display        : flex;
+	flex-direction : row;
 }
 
 .personal{
-	flex:		1;
-	padding:	5px;
-	color:		white;
-	background: rgb(30,85,155);
-	background: url('../img/square_bg.png'), linear-gradient(to bottom, rgba(30,85,155,1) 0%,rgba(0,130,230,1) 100%);
-	min-width:	200px;
-	box-shadow: inset -7px 0 9px -7px rgba(0,0,0,0.4);
+	min-width  : 220px;
+	padding    : 5px;
+
+	background : rgb(30,85,155);
+	background : url('../img/square_bg.png'), linear-gradient(to bottom, rgba(30,85,155,1) 0%,rgba(0,130,230,1) 100%);
+	color      : white;
+	box-shadow : inset -7px 0 9px -7px rgba(0,0,0,0.4);
+
+	flex       : 1;
 }
 
 .personal .header{
-	font-variant:	small-caps;
-	font-size:		16pt;
-	text-align:		center;
+	font-size    : 16pt;
+	font-variant : small-caps;
+	text-align   : center;
 }
 
 .personal .subhead{
-	text-align:		center;
-	margin-bottom:	5px;
+	margin-bottom : 5px;
+	text-align    : center;
 }
 
 .personal .list .header{
-	text-align:		center;
-	font-size:		11pt;
-	font-variant:   small-caps;
+	font-size    : 11pt;
+	font-variant : small-caps;
+	text-align   : center;
 }
 
 .personal .list .item{
-	margin-bottom:	5px;
-	color:			white;
-	padding:		5px;
+	margin-bottom : 5px;
+	padding       : 5px;
+
+	color         : white;
 }
 
 .personal .list .item .label{
-	font-variant:	small-caps;
-	font-size:		12pt;
-	margin-bottom:	5px;
+	margin-bottom : 5px;
+
+	font-size     : 12pt;
+	font-variant  : small-caps;
 }
 
 .personal .list .item .label span{
-	display:		inline-block;
-	min-width:		75px;
-	border-bottom:	1px solid white;
+	display       : inline-block;
+
+	min-width     : 75px;
+
+	border-bottom : 1px solid white;
 }
 
 .personal .list .item .info{
-	padding-left:	15px;
 }
 
 .personal .list a{
-	text-decoration: 	none;
-	color:				white;
+	color           : white;
+	text-decoration : none;
 }
 
 .personal .list a .item{
-	transition:  		background 0.25s, text-shadow 0.25s;
+	transition : background 0.25s, text-shadow 0.25s;
 }
 
 .personal .list a:hover .item{
-	background:			rgba(150,150,150,0.5);
-	text-shadow:		2px 2px 2px black;
+	background  : rgba(150,150,150,0.5);
+	text-shadow : 2px 2px 2px black;
 }
 
 .personal ul{
-	list-style-type: square;
+	margin-left     : 15px;
+	list-style-type : square;
 }
 
 .resume{
-	flex:8;
-	font-family: 'Roboto', sans-serif;
-	padding:	5px;
-	display:	flex;
-	flex-direction: column;
+	display        : flex;
+
+	padding        : 5px;
+
+	font-family    : 'Roboto', sans-serif;
+
+	flex           : 8;
+	flex-direction : column;
 }
 
 .resume p{
-	font-size:	9pt;
+	font-size : 9pt;
+}
+
+.resume ul{
+	font-size : 9pt;
 }
 
 .resume .list{
-	flex: 1;
+	flex : 1;
 }
 
 .resume .header{
-	font-size:		14pt;
-	font-weight:	700;
-	font-variant:	small-caps;
-	border-bottom:	1px solid black;
-	margin-bottom:	5px;
+	margin-bottom : 5px;
+
+	font-size     : 14pt;
+	font-variant  : small-caps;
+	font-weight   : 700;
+	border-bottom : 1px solid black;
 }
 
 .resume .footer{
-	font-variant: 	small-caps;
-	text-align:		center;
-	font-size:		8pt;
+	font-size    : 8pt;
+	font-variant : small-caps;
+	text-align   : center;
 }
 
 .resume .item{
-	display:		flex;
-	flex-direction: row;
-	margin-bottom:	5px;
-	padding-bottom:	5px;
-	border-bottom:	1px solid rgba(150,150,150,0.5);
+	display        : flex;
+
+	margin-bottom  : 5px;
+	padding-bottom : 5px;
+
+	border-bottom  : 1px solid rgba(150,150,150,0.5);
+
+	flex-direction : row;
 }
 
 .resume .item .date{
-	flex:		1;
-	min-width:	150px;
-	text-align:	center;
-	font-variant: small-caps;
-	background:	rgb(55,60,75);
-	color:		white;
-	display:	flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
+	display         : flex;
+
+	min-width       : 150px;
+
+	background      : rgb(55,60,75);
+	font-variant    : small-caps;
+	color           : white;
+	text-align      : center;
+
+	flex            : 1;
+	flex-direction  : column;
+	align-items     : center;
+	justify-content : center;
 }
 
 .resume .item .info{
-	flex:			9;
-	padding-left:	15px;
+	padding-left : 15px;
+	flex         : 9;
 }
 
 .resume .item .info .header{
-	font-weight:	400;
-	font-size:		11pt;
-
+	font-size   : 11pt;
+	font-weight : 400;
 }
 
 .resume .item .info .subhead{
-	font-weight:	400;
-	font-size:		10pt;
-	font-style:		italic; 
-	margin-top:		5px;
+	margin-top  : 5px;
+
+	font-size   : 10pt;
+	font-style  : italic;
+	font-weight : 400;
 }
 
 .resume .item .info ul{
-	margin-top:		5px;
-	margin-left: 	20px;
-	list-style-type: square;
+	margin-top      : 5px;
+	margin-left     : 20px;
+
+	list-style-type : square;
 }
 
 .resume .item .info p{
-	margin-top:		3px;
-	margin-bottom:	3px;
+	margin-top    : 3px;
+	margin-bottom : 3px;
 }
 
 .printOnly{
-	display:	none;
+	display : none;
 }
 
 @media print {
 	.printOnly{
-		display:	block;
+		display : block;
 	}
 }
 
 /*mobile modifications*/
-
 @media screen and (max-width: 500px) {
-	.personal{
-		min-width:	125px;
+	body{
+		display:	block;
 	}
 
 	.personal .header{
-		font-size:	10pt;
-		font-weight:700;
+		font-size   : 10pt;
+		font-weight : 700;
 	}
 
 	.personal .subhead{
-		font-weight:	400;
-		font-size:		8pt;
+		font-size   : 8pt;
+		font-weight : 400;
 	}
 
 	.personal .list .header{
-		font-size:		8pt;
+		font-size : 8pt;
 	}
 
 	.personal .list .item{
-		padding: 0;
+		padding : 0;
 	}
 
 	.personal .list .item .label{
-		font-size:	8pt;
+		font-size : 8pt;
 	}
 
 	.personal .list .item .info{
-		font-size:	8pt;
-		padding-left:	0;
+		padding-left : 0;
+		font-size    : 8pt;
 	}
 
 	.personal .list .item .info i{
-		display:	none;
+		display : none;
+	}
+
+	.resume .item{
+		display:	block;
+	}
+
+	.resume .cinfo{
+		padding-bottom:	15px;
+		padding-top:	5px;
 	}
 }
